# pm-bot

./: .gitignore  Cargo.toml  response.json
adapters/: Cargo.toml
adapters/src/: binance_order_book_feed.rs  binance_price_feed.rs  chainlink_price_feed.rs  clob_market_client.rs  gamma_market_catalog.rs  lib.rs  mock_store.rs  okx_order_book_feed.rs  polymarket_market_feed.rs  recording_feeds.rs  sim_market_client.rs  sqlite_store.rs
apps/pm-bot/: Cargo.toml
apps/pm-bot/src/: bootstrap.rs  lib.rs  main.rs
apps/pm-explorer/: Cargo.toml
apps/pm-explorer/src/: main.rs
docs/: dry-run-and-simulation-plan.md
libs/pm-core/: Cargo.toml
libs/pm-core/src/: auth.rs  clock.rs  config.rs  domain.rs  error.rs  format.rs  lib.rs  ports.rs  state.rs  stats.rs  strategy.rs  types.rs
libs/pm-core/src/tasks/: bankroll.rs  decision_center.rs  executor.rs  heartbeat.rs  market_data.rs  market_rotation.rs  mod.rs  order_status_poller.rs  persistence.rs  price_feed.rs  redeem_status_poller.rs  settlement.rs
libs/pm-strategy/: Cargo.toml
libs/pm-strategy/src/: lib.rs  strategy.rs
libs/pm-strategy/src/indicators/: candle.rs  ema.rs  mod.rs  momentum.rs  rsi.rs  tick_trend.rs
libs/pm-strategy/src/model/: mod.rs  normal.rs  obi.rs  signal.rs  vol.rs
libs/pm-strategy/src/sizing/: fixed_amount.rs  fixed_fraction.rs  kelly.rs  mod.rs
libs/pm-strategy/src/strategy/: composite.rs  mod.rs  quant.rs  v1_basic.rs
