[workspace]
resolver = "2"
members = [
    "apps/pm-explorer",
    "apps/pm-bot",
    "libs/*",
    "adapters",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Miosan <miosan@proton.me>"]
license = "Proprietary"

[workspace.dependencies]
tokio      = { version = "1.35", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow     = "1.0"
clap       = { version = "4.5", features = ["derive"] }
nix        = { version = "0.29", features = ["signal", "process"] }
borsh      = { version = "1.5", features = ["derive"] }
thiserror  = "1.0"
rust_decimal  = { version = "1", features = ["serde-with-str"] }
tokio-util    = { version = "0.7", features = ["rt"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
async-trait   = "0.1"
rusqlite      = { version = "0.31", features = ["bundled"] }
# redis      = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
