[package]
name = "adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pm-core             = { path = "../libs/pm-core" }
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["clob", "gamma", "data", "heartbeats", "rtds"] }
rusqlite.workspace  = true
tokio.workspace     = true
tokio-util.workspace = true
tracing.workspace   = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace     = true
serde_json.workspace = true
rust_decimal.workspace = true
alloy.workspace     = true
anyhow.workspace    = true
reqwest             = { version = "0.12", features = ["json"] }
chrono              = { version = "0.4", features = ["serde"] }
futures = "0.3.32"

[dev-dependencies]
rust_decimal_macros = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
