[package]
name = "pm-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pm-bot"
path = "src/main.rs"

[dependencies]
pm-core             = { path = "../../libs/pm-core" }
adapters            = { path = "../../adapters" }
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["clob", "gamma"] }
tokio.workspace     = true
tokio-util          = { workspace = true }
tracing.workspace   = true
tracing-subscriber.workspace = true
anyhow.workspace    = true
async-trait.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1"
