[package]
name = "pm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rust_decimal.workspace = true
tokio       = { workspace = true, features = ["full"] }
tokio-util  = { workspace = true }
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde       = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
