[package]
name = "pm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rust_decimal_macros = "1"
rust_decimal.workspace = true
tokio       = { workspace = true, features = ["full"] }
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["clob"] }
tokio-util  = { workspace = true }
tracing.workspace = true
unicode-width.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde       = { workspace = true }
alloy.workspace = true

[dev-dependencies]
rust_decimal_macros = "1"
