[package]
name = "pm-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pm-core = { path = "../pm-core" }
rust_decimal.workspace = true
tracing.workspace = true

[dev-dependencies]
rust_decimal_macros = "1"
alloy.workspace = true
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["clob"] }
